# cuttle

./: .gitignore  Cargo.toml  LICENSE  flake.nix  run_blender_test.sh  test_blender_cli.py  test_integration.py
blender_api/: Cargo.toml
blender_api/src/: lib.rs
blender_test_addon/: README.md  __init__.py
cuttle/: Cargo.toml
cuttle/src/: bridge.rs  lib.rs  logging.rs  service.rs
cuttle/src/bridge/: msgbus.rs
lang/: Cargo.toml
lang/examples/: basic_usage.rs
lang/src/: ast.rs  blender.rs  error.rs  lib.rs  parser.rs
py/: Cargo.toml
py/src/: lib.rs
validation_results/: basic_geometry_state.json  material_properties_state.json  multi_object_state.json
