[workspace]
resolver = "2"
members = ["blender_api"]

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
rust_2018_idioms = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
snafu = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
