[package]
name = "cuttle"
version = "0.1.0"
edition = "2024"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
flume = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
cuttle_blender_api = { path = "../blender_api" }

[lints]
workspace = true
