[package]
name = "cuttle_py"
version = "0.1.0"
edition = "2024"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
license-file = "../LICENSE"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
cuttle = { path = "../cuttle" }

[lib]
name = "cuttle_py"
crate-type = ["cdylib"]

[lints]
workspace = true
